restyle form for text inputs and checkboxes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <meta name="google" content="notranslate">
@@ -28,24 +27,30 @@
             <fieldset>
               <legend>Legend</legend>
               <div class="form-group">
-                <label for="inputName" class="col-lg-2 control-label">Name</label>
+                <label for="inputProject" class="col-lg-2 control-label">Project</label>
                 <div class="col-lg-10">
-                  <input type="text" class="form-control" id="inputName" placeholder="Name">
+                  <input type="text" class="form-control" id="inputProject" placeholder="Project Name">
                 </div>
               </div>
+
+
               <div class="form-group">
-                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+                <label for="inputName" class="col-lg-2 control-label">Developer</label>
                 <div class="col-lg-10">
-                  <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                  <input type="text" class="form-control" id="inputName" placeholder="Developer Name">
                   <div class="checkbox">
-                    <label>
-					          <input type="checkbox"> Checkbox
-                    <ul id="optionNameMenu">
-                    </ul>
-				            </label>
+
+					          <h4>Check the following to include:</h4>
+                    <div id="optionNameMenu" class="list-unstyled">
+
+
+                    </div>
+
                   </div>
                 </div>
               </div>
+
+
               <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
                   <button type="reset" class="btn btn-default">Cancel</button>
