--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="js/jszip.js"></script>
   <script src="js/jszip-utils.js"></script>
   <script src="js/FileSaver.js"></script>
+  <script src="js/string.js"></script>
   <script src="js/script.js"></script>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
