need to extract submit and cancel buttons to avoid unexpected behavior when clicking (submitting)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="well bs-component">
           <form id="zipForm" class="form-horizontal">
             <fieldset>
-              <legend>Legend</legend>
+              <legend>Dev Maker</legend>
               <div class="form-group">
                 <label for="inputProject" class="col-lg-2 control-label">Project</label>
                 <div class="col-lg-10">
