--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
               <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
-                  <button class="btn btn-default" id="resetButton">Cancel</button>
+                  <button type="button" class="btn btn-default" id="resetButton">Cancel</button>
                   <button id="zipButton" type="submit" class="btn btn-primary">Download</button>
                 </div>
               </div>
