restyled the checkboxes to look better on small screens

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <div class="checkbox">
 
 					          <h4>Check the following to include:</h4>
-                    <div id="optionNameMenu" class="list-unstyled">
+                    <div id="optionNameMenu" class="form-group-row">
 
 
                     </div>
