--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="bs-component">
           <form id="zipForm" class="form-horizontal">
             <!-- <fieldset> -->
-              <h1>Template / <span class="russian">образец</span></h1>
+              <h1>Springboard / <span class="russian">трамплин</span></h1>
               <div class="form-group">
                 <label for="inputProject" class="col-lg-2 control-label">Project</label>
                 <div class="col-lg-10">
