--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="row">
       <!-- A form example -->
       <div class="col-xs-12">
-        <a href="https://github.com/you"><img style="position: absolute; top: -45px; right: -30px; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+        <a href="https://github.com/Epicodus-SZ/Springboard"><img style="position: absolute; top: -45px; right: -30px; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 
         <div class="bs-component">
           <form id="zipForm" class="form-horizontal">
@@ -58,19 +58,36 @@
     </div>
   </div>
   <div id="footer" class="container">
-    <p>(C) STEVE ZASKE, 2017</p>
+  <!-- Trigger/Open The Modal -->
+  <button id="myBtn">(C) TEAM BUNNY, 2017</button>
   </div>
+  <!--</div>-->
   <div id="buttonContainer" class="container">
     <div class="content center">
       <div class="cont_tasto cont_tasto_upload">
-        <a id="zipButton" class="btn tasto"><i class="fa fa-cloud-download"></i><span class="text"><strong>Download it!</strong></span></a>
+        <a id="zipButton" class="btn disabled tasto"><i class="fa fa-cloud-download"></i><span class="text"><strong>Download it!</strong></span></a>
       </div>
       <div class="cont_tasto cont_tasto_upload">
         <a id="resetButton" class="btn tasto"><i class="fa fa-cloud-download"></i><span class="text"><strong>Cancel</strong></span></a>
       </div>
     </div>
   </div>
-
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close">&times;</span>
+        <h4>Project coded by:</h4>
+      </div>
+      <ul><strong>
+        <li>Alena Golovina</li>
+        <li>Anna Kuznetsova</li>
+        <li>Michael Dunlap</li>
+        <li>Steve Zaske</li>
+        <li>Witty Chang</li>
+      </ul></strong>
+    </div>
+  </div>
 </body>
 
 </html>
