update to the page CSS

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div id="container" class="container">
     <div class="row">
       <!-- A form example -->
-      <img id="logo" src="img/bunny-orange.png" alt="bunny">
+      <img id="logo" src="img/bunny.png" alt="bunny">
       <div class="col-xs-12">
         <a href="https://github.com/Epicodus-SZ/Springboard"><img style="position: absolute; top: -45px; right: -30px; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 
@@ -36,7 +36,7 @@
             <div class="form-group">
               <label for="inputProject" class="col-lg-2 control-label">Project</label>
               <div class="col-lg-10">
-                <input type="text" data-toggle="popover" data-placement="top" data-content="Project names cannot contain special characters" class="form-control" id="inputProject" placeholder="Project Name">
+                <input type="text" data-placement="top" data-content="Project names cannot contain special characters" class="form-control" id="inputProject" placeholder="Project Name">
               </div>
             </div>
 
@@ -45,8 +45,8 @@
               <div class="col-lg-10">
                 <input type="text" class="form-control" id="inputName" placeholder="Developer Name">
                 <br>
-                <div class="checkbox">
-					        <p>Select the items you want incuded in your project:</p>
+                <p>Select the items you want incuded in your project:</p>
+                <div id="checkboxes">
                   <div id="optionNameMenu" class="form-group-row">
                   </div>
                 </div>
