--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="favicon.ico" >
   <title>Springboard / Трамплин</title>
 </head>
 
