fix for file content bug

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="form-group">
               <label for="inputProject" class="col-lg-2 control-label">Project</label>
               <div class="col-lg-10">
-                <input type="text" data-placement="top" data-content="Project names cannot contain special characters" class="form-control" id="inputProject" placeholder="Project Name">
+                <input type="text" data-placement="top" data-content="Project names cannot contain special characters" class="form-control" id="inputProject" placeholder="Project Name required">
               </div>
             </div>
 
